antlr4.5-support/src/main/java/org/beetl/core/parser/BeetlParser.java
// Generated from BeetlParser.g4 by ANTLR 4.5.3
package org.beetl.core.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BeetlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		If=1, For=2, Elsefor=3, Else=4, While=5, Switch=6, Select=7, Return=8, 
		Break=9, Continue=10, Var=11, Directive=12, Case=13, Default=14, Try=15, 
		Catch=16, Ajax=17, Fragment=18, LEFT_BRACE=19, RIGHT_BRACE=20, LEFT_PAR=21, 
		RIGHT_PAR=22, LEFT_SQBR=23, RIGHT_SQBR=24, INCREASE=25, DECREASE=26, VIRTUAL=27, 
		ADD=28, MIN=29, MUlTIP=30, DIV=31, MOD=32, EQUAL=33, NOT_EQUAL=34, ASSIN=35, 
		LARGE_EQUAL=36, LARGE=37, LESS_EQUAL=38, LESS=39, NOT=40, AND=41, OR=42, 
		QUESTOIN=43, AT=44, NULL=45, TRUE=46, FALSE=47, END=48, COMMA=49, COLON=50, 
		PERIOD=51, FOR_IN=52, LEFT_TOKEN=53, LEFT_TOKEN2=54, RIGHT_TOKEN=55, LEFT_TEXT_TOKEN=56, 
		HexLiteral=57, DecimalLiteral=58, OctalLiteral=59, FloatingPointLiteral=60, 
		StringLiteral=61, Identifier=62, WS=63, LINE_COMMENT=64, COMMENT=65;
	public static final int
		RULE_prog = 0, RULE_block = 1, RULE_statement = 2, RULE_directiveExp = 3, 
		RULE_directiveExpIDList = 4, RULE_g_switchStatment = 5, RULE_g_caseStatment = 6, 
		RULE_g_defaultStatment = 7, RULE_varDeclareList = 8, RULE_assignMent = 9, 
		RULE_switchBlock = 10, RULE_switchBlockStatementGroup = 11, RULE_switchLabel = 12, 
		RULE_forControl = 13, RULE_forInControl = 14, RULE_generalForControl = 15, 
		RULE_forInit = 16, RULE_forUpdate = 17, RULE_parExpression = 18, RULE_expressionList = 19, 
		RULE_statementExpression = 20, RULE_textStatment = 21, RULE_textVar = 22, 
		RULE_textformat = 23, RULE_constantsTextStatment = 24, RULE_constantExpression = 25, 
		RULE_expression = 26, RULE_generalAssignExp = 27, RULE_varRef = 28, RULE_generalAssingSelfExp = 29, 
		RULE_varAttribute = 30, RULE_safe_output = 31, RULE_safe_allow_exp = 32, 
		RULE_functionCall = 33, RULE_functionTagCall = 34, RULE_functionNs = 35, 
		RULE_nativeCall = 36, RULE_nativeMethod = 37, RULE_nativeArray = 38, RULE_nativeVarRefChain = 39, 
		RULE_json = 40, RULE_jsonKeyValue = 41, RULE_literal = 42, RULE_booleanLiteral = 43, 
		RULE_arguments = 44, RULE_typeArgs = 45, RULE_typeArg = 46, RULE_classType = 47;
	public static final String[] ruleNames = {
		"prog", "block", "statement", "directiveExp", "directiveExpIDList", "g_switchStatment", 
		"g_caseStatment", "g_defaultStatment", "varDeclareList", "assignMent", 
		"switchBlock", "switchBlockStatementGroup", "switchLabel", "forControl", 
		"forInControl", "generalForControl", "forInit", "forUpdate", "parExpression", 
		"expressionList", "statementExpression", "textStatment", "textVar", "textformat", 
		"constantsTextStatment", "constantExpression", "expression", "generalAssignExp", 
		"varRef", "generalAssingSelfExp", "varAttribute", "safe_output", "safe_allow_exp", 
		"functionCall", "functionTagCall", "functionNs", "nativeCall", "nativeMethod", 
		"nativeArray", "nativeVarRefChain", "json", "jsonKeyValue", "literal", 
		"booleanLiteral", "arguments", "typeArgs", "typeArg", "classType"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'if'", "'for'", "'elsefor'", "'else'", "'while'", "'switch'", "'select'", 
		"'return'", "'break'", "'continue'", "'var'", null, "'case'", "'default'", 
		"'try'", "'catch'", "'#ajax'", "'#fragment'", "'{'", "'}'", "'('", "')'", 
		"'['", "']'", "'++'", "'--'", "'.~'", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'=='", "'!='", "'='", "'>='", "'>'", "'<='", "'<'", "'!'", "'&&'", "'||'", 
		"'?'", "'@'", "'null'", "'true'", "'false'", "';'", "','", "':'", "'.'", 
		"'in'", "'<~'", "'<#'", "'~>'", "'<^'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "If", "For", "Elsefor", "Else", "While", "Switch", "Select", "Return", 
		"Break", "Continue", "Var", "Directive", "Case", "Default", "Try", "Catch", 
		"Ajax", "Fragment", "LEFT_BRACE", "RIGHT_BRACE", "LEFT_PAR", "RIGHT_PAR", 
		"LEFT_SQBR", "RIGHT_SQBR", "INCREASE", "DECREASE", "VIRTUAL", "ADD", "MIN", 
		"MUlTIP", "DIV", "MOD", "EQUAL", "NOT_EQUAL", "ASSIN", "LARGE_EQUAL", 
		"LARGE", "LESS_EQUAL", "LESS", "NOT", "AND", "OR", "QUESTOIN", "AT", "NULL", 
		"TRUE", "FALSE", "END", "COMMA", "COLON", "PERIOD", "FOR_IN", "LEFT_TOKEN", 
		"LEFT_TOKEN2", "RIGHT_TOKEN", "LEFT_TEXT_TOKEN", "HexLiteral", "DecimalLiteral", 
		"OctalLiteral", "FloatingPointLiteral", "StringLiteral", "Identifier", 
		"WS", "LINE_COMMENT", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BeetlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BeetlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BeetlParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << If) | (1L << For) | (1L << While) | (1L << Switch) | (1L << Select) | (1L << Return) | (1L << Break) | (1L << Continue) | (1L << Var) | (1L << Directive) | (1L << Try) | (1L << Ajax) | (1L << Fragment) | (1L << LEFT_BRACE) | (1L << LEFT_PAR) | (1L << LEFT_SQBR) | (1L << INCREASE) | (1L << DECREASE) | (1L << ADD) | (1L << MIN) | (1L << NOT) | (1L << AT) | (1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << END) | (1L << LEFT_TOKEN) | (1L << LEFT_TOKEN2) | (1L << LEFT_TEXT_TOKEN) | (1L << DecimalLiteral) | (1L << FloatingPointLiteral) | (1L << StringLiteral) | (1L << Identifier))) != 0)) {
				{
				{
				setState(96);
				statement();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACE() { return getToken(BeetlParser.LEFT_BRACE, 0); }
		public TerminalNode RIGHT_BRACE() { return getToken(BeetlParser.RIGHT_BRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(LEFT_BRACE);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << If) | (1L << For) | (1L << While) | (1L << Switch) | (1L << Select) | (1L << Return) | (1L << Break) | (1L << Continue) | (1L << Var) | (1L << Directive) | (1L << Try) | (1L << Ajax) | (1L << Fragment) | (1L << LEFT_BRACE) | (1L << LEFT_PAR) | (1L << LEFT_SQBR) | (1L << INCREASE) | (1L << DECREASE) | (1L << ADD) | (1L << MIN) | (1L << NOT) | (1L << AT) | (1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << END) | (1L << LEFT_TOKEN) | (1L << LEFT_TOKEN2) | (1L << LEFT_TEXT_TOKEN) | (1L << DecimalLiteral) | (1L << FloatingPointLiteral) | (1L << StringLiteral) | (1L << Identifier))) != 0)) {
				{
				{
				setState(105);
				statement();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StaticOutputStContext extends StatementContext {
		public ConstantsTextStatmentContext constantsTextStatment() {
			return getRuleContext(ConstantsTextStatmentContext.class,0);
		}
		public StaticOutputStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterStaticOutputSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitStaticOutputSt(this);
		}
	}
	public static class ReturnStContext extends StatementContext {
		public TerminalNode Return() { return getToken(BeetlParser.Return, 0); }
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ReturnStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterReturnSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitReturnSt(this);
		}
	}
	public static class TryStContext extends StatementContext {
		public TerminalNode Try() { return getToken(BeetlParser.Try, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode Catch() { return getToken(BeetlParser.Catch, 0); }
		public TerminalNode LEFT_PAR() { return getToken(BeetlParser.LEFT_PAR, 0); }
		public TerminalNode RIGHT_PAR() { return getToken(BeetlParser.RIGHT_PAR, 0); }
		public TerminalNode Identifier() { return getToken(BeetlParser.Identifier, 0); }
		public TryStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterTrySt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitTrySt(this);
		}
	}
	public static class VarStContext extends StatementContext {
		public TerminalNode Var() { return getToken(BeetlParser.Var, 0); }
		public VarDeclareListContext varDeclareList() {
			return getRuleContext(VarDeclareListContext.class,0);
		}
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public TypeArgsContext typeArgs() {
			return getRuleContext(TypeArgsContext.class,0);
		}
		public VarStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterVarSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitVarSt(this);
		}
	}
	public static class AssignStContext extends StatementContext {
		public AssignMentContext assignMent() {
			return getRuleContext(AssignMentContext.class,0);
		}
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public AssignStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterAssignSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitAssignSt(this);
		}
	}
	public static class WhileStContext extends StatementContext {
		public TerminalNode While() { return getToken(BeetlParser.While, 0); }
		public ParExpressionContext parExpression() {
			return getRuleContext(ParExpressionContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public WhileStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterWhileSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitWhileSt(this);
		}
	}
	public static class FunctionTagStContext extends StatementContext {
		public FunctionTagCallContext functionTagCall() {
			return getRuleContext(FunctionTagCallContext.class,0);
		}
		public FunctionTagStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterFunctionTagSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitFunctionTagSt(this);
		}
	}
	public static class BreakStContext extends StatementContext {
		public TerminalNode Break() { return getToken(BeetlParser.Break, 0); }
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public BreakStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterBreakSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitBreakSt(this);
		}
	}
	public static class AjaxStContext extends StatementContext {
		public List<TerminalNode> Identifier() { return getTokens(BeetlParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(BeetlParser.Identifier, i);
		}
		public TerminalNode COLON() { return getToken(BeetlParser.COLON, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode Ajax() { return getToken(BeetlParser.Ajax, 0); }
		public TerminalNode Fragment() { return getToken(BeetlParser.Fragment, 0); }
		public AjaxStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterAjaxSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitAjaxSt(this);
		}
	}
	public static class StatmentExpStContext extends StatementContext {
		public StatementExpressionContext statementExpression() {
			return getRuleContext(StatementExpressionContext.class,0);
		}
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public StatmentExpStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterStatmentExpSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitStatmentExpSt(this);
		}
	}
	public static class IfStContext extends StatementContext {
		public TerminalNode If() { return getToken(BeetlParser.If, 0); }
		public ParExpressionContext parExpression() {
			return getRuleContext(ParExpressionContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode Else() { return getToken(BeetlParser.Else, 0); }
		public IfStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterIfSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitIfSt(this);
		}
	}
	public static class DirectiveStContext extends StatementContext {
		public TerminalNode Directive() { return getToken(BeetlParser.Directive, 0); }
		public DirectiveExpContext directiveExp() {
			return getRuleContext(DirectiveExpContext.class,0);
		}
		public DirectiveStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterDirectiveSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitDirectiveSt(this);
		}
	}
	public static class ContinueStContext extends StatementContext {
		public TerminalNode Continue() { return getToken(BeetlParser.Continue, 0); }
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public ContinueStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterContinueSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitContinueSt(this);
		}
	}
	public static class SiwchStContext extends StatementContext {
		public TerminalNode Switch() { return getToken(BeetlParser.Switch, 0); }
		public ParExpressionContext parExpression() {
			return getRuleContext(ParExpressionContext.class,0);
		}
		public SwitchBlockContext switchBlock() {
			return getRuleContext(SwitchBlockContext.class,0);
		}
		public SiwchStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterSiwchSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitSiwchSt(this);
		}
	}
	public static class BlockStContext extends StatementContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlockStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterBlockSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitBlockSt(this);
		}
	}
	public static class SelectStContext extends StatementContext {
		public TerminalNode Select() { return getToken(BeetlParser.Select, 0); }
		public G_switchStatmentContext g_switchStatment() {
			return getRuleContext(G_switchStatmentContext.class,0);
		}
		public SelectStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterSelectSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitSelectSt(this);
		}
	}
	public static class EndContext extends StatementContext {
		public TerminalNode END() { return getToken(BeetlParser.END, 0); }
		public EndContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitEnd(this);
		}
	}
	public static class ForStContext extends StatementContext {
		public TerminalNode For() { return getToken(BeetlParser.For, 0); }
		public TerminalNode LEFT_PAR() { return getToken(BeetlParser.LEFT_PAR, 0); }
		public ForControlContext forControl() {
			return getRuleContext(ForControlContext.class,0);
		}
		public TerminalNode RIGHT_PAR() { return getToken(BeetlParser.RIGHT_PAR, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode Elsefor() { return getToken(BeetlParser.Elsefor, 0); }
		public ForStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterForSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitForSt(this);
		}
	}
	public static class TextOutputStContext extends StatementContext {
		public TextStatmentContext textStatment() {
			return getRuleContext(TextStatmentContext.class,0);
		}
		public TextOutputStContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).enterTextOutputSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BeetlParserListener ) ((BeetlParserListener)listener).exitTextOutputSt(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			setState(186);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new BlockStContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				block();
				}
				break;
			case 2:
				_localctx = new TextOutputStContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				textStatment();
				}
				break;
			case 3:
				_localctx = new StaticOutputStContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				constantsTextStatment();
				}
				break;
			case 4:
				_localctx = new IfStContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(116);
				match(If);
				setState(117);
				parExpression();
				setState(118);
				statement();
				setState(121);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(119);
					match(Else);
					setState(120);
					statement();
					}
					break;
				}
				}
				break;
			case 5:
				_localctx = new ForStContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(123);
				match(For);
				setState(124);
				match(LEFT_PAR);
				setState(125);
				forControl();
				setState(126);
				match(RIGHT_PAR);
				setState(127);
				statement();
				setState(130);
				_errHandler.sync(this);
